# Enclava-lazai

./: LICENSE  README.md
backend/: .env.exemple  .gitignore  Cargo.toml
backend/migrations/: 20250818194855_init.sql
backend/src/: config.rs  main.rs  state.rs  tee.rs  types.rs
backend/src/api/: dataset.rs  mod.rs  profile.rs
backend/src/database/: mod.rs
backend/src/fetcher/: mint.rs  mod.rs
backend/src/helpers/: agents.rs  csv.rs  mod.rs  nft.rs
contracts/: deploy.sh  deploy_testnet.sh  foundry.toml
contracts/script/: DeployEnclavaPayments.s.sol
contracts/src/: EnclavaPayments.sol
contracts/test/: EnclavaPayment.t.sol
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx  rainbowkit-custom.css  wagmi.config.ts
frontend/src/components/: CTASection.tsx  DiagramSpinner.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  SeiSection.tsx  Sidebar.tsx  WhySection.tsx
frontend/src/contracts/: DatasetNFT.ts
frontend/src/hooks/: useDatasetPayment.ts  useImageLoader.ts  useUserEarnings.ts
frontend/src/pages/: Chat.tsx  DatasetDetails.tsx  Marketplace.tsx  ProfileDashboard.tsx  Transactions.tsx  UploadDataset.tsx
frontend/src/services/: api.ts
